force-app/main/default/objects/Invoice__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>Asset</label>
    <length>18</length>
    <type>Text</type>
</CustomField>