force-app/main/default/objects/Invoice__c/fields/Collection_Status__c.field-meta.xml
<CustomField>
    <fullName>Collection_Status__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL(Status__c, &quot;Paid&quot;),
        OutstandingAmount__c &lt;= 0
    ),
    &quot;Paid&quot;,
    IF(
        AND(
            NOT(ISBLANK(DueDate__c)),
            DueDate__c &lt; TODAY(),
            OutstandingAmount__c &gt; 0
        ),
        &quot;Overdue&quot;,
        &quot;Open&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Status</label>
    <type>Text</type>
</CustomField>