force-app/main/default/objects/Invoice__c/fields/InvoiceKey__c.field-meta.xml
<CustomField>
    <fullName>InvoiceKey__c</fullName>
    <description>Optional external key for imports/mapping.</description>
    <externalId>true</externalId>
    <label>Invoice Key</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>