force-app/main/default/objects/Invoice__c/fields/InvoicePdfFileId__c.field-meta.xml
<CustomField>
    <fullName>InvoicePdfFileId__c</fullName>
    <label>Invoice Pdf File Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>