force-app/main/default/objects/Invoice__c/fields/OutstandingAmount__c.field-meta.xml
<CustomField>
    <fullName>OutstandingAmount__c</fullName>
    <label>Outstanding Amount</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <description>Optional for MVP; can be set by Flow/Apex based on Payments. test</description>
</CustomField>