force-app/main/default/objects/Invoice__c/fields/PeriodMonth__c.field-meta.xml
<CustomField>
    <fullName>PeriodMonth__c</fullName>
    <label>Period Month</label>
    <required>true</required>
    <type>Date</type>
</CustomField>