force-app/main/default/objects/Invoice__c/fields/Total_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Amount__c</fullName>
    <description>To sum related payments</description>
    <label>Total Paid Amount</label>
    <summarizedField>Payment__c.Amount__c</summarizedField>
    <summaryForeignKey>Payment__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>